--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.9"
+    "mongoose": "^5.4.9",
+    "multer": "^1.4.1",
+    "path": "^0.12.7"
   },
   "description": ""
 }
