--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.9",
     "multer": "^1.4.1",
@@ -17,4 +18,3 @@
   },
   "description": ""
 }
-
